description = 'Lucene document mapper plugin (ServiceLoader)'

dependencies {
    api project(':protomolt-search-index-spi')
    api project(':protomolt-mapper')
    api libs.lucene.core
    // LuceneIndexWriter opens indexes with a StandardAnalyzer.
    api libs.lucene.analysis.common
    // Canonical range types for the range-resolution tests.
    testImplementation project(':protomolt-protobuf-types')
}

// The Lucene 11 line ships Java 25 bytecode. That matched the project baseline when it
// moved to 25, so this module no longer needs a launcher of its own; the pin stays only
// to keep -PtestJdk from pointing the tests at an older JVM than Lucene can load.
tasks.withType(Test).configureEach {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
